--- a/css/base.css
+++ b/css/base.css
@@ -194,6 +194,7 @@ main {
 	font-size: 1.73rem;
     text-transform: uppercase;
 	text-transform: none;
+	text-decoration: underline;
 	margin: 31vh 0 0 0;
 	padding: 1rem 0 0 0;
 	display: inline-block;
@@ -763,6 +764,9 @@ color: var(--color-bgitem2);
 	}
 	.intro__enter {
 		margin: auto 0 0 0;
+		text-transform: uppercase;
+	text-transform: none;
+	text-decoration: underline;
 	}
 	
 	.intro__social {
