--- a/css/base.css
+++ b/css/base.css
@@ -243,6 +243,7 @@ main {
 }
 
 .intro__content-text {
+	display: none;
 	font-size: 0.85rem;
 }
 
@@ -626,11 +627,46 @@ color: var(--color-bgitem2);
     color: var(--color-bg-item1);
     border-color: var(--color-bg-item1);
 }
+
+.gallery-section {
+    margin-top: 15px;
+    padding: 10px;
+    background-color: var(--color-bg-item1);
+    border: 1px solid var(--color-link-hover);
+    border-radius: 5px;
+    overflow: hidden;
+    transition: max-height 0.3s ease;
+    max-height: 0; /* Hidden by default */
+    display: none; /* Start as hidden */
+}
+
+.gallery-section.open {
+    display: block; /* Display gallery when toggled */
+    max-height: 500px; /* Adjust max height based on content */
+}
+
+/* Gallery Images */
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+}
+
+.gallery img {
+    max-width: 100px;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+}
+
+.gallery img:hover {
+    transform: scale(1.1);
+}
 /* Modal Styling */
 #gallerySwipeContainer {
     display: flex;
     flex-wrap: nowrap;
-    overflow: hidden; /* Ensures only one image is visible at a time */
+    
     transition: transform 0.3s ease-in-out;
     width: 100%;
 }
@@ -681,7 +717,7 @@ color: var(--color-bgitem2);
 .gallery-modal-images {
     display: flex;
     flex-wrap: nowrap;
-    overflow: hidden;
+    
     transition: transform 0.3s ease-in-out;
 }
 
@@ -762,6 +798,10 @@ color: var(--color-bgitem2);
 		flex-direction: column;
 		align-items: flex-end;
 	}
+	.intro__content-text {
+	display: block;
+	font-size: 0.85rem;
+}
 	.intro__enter {
 		margin: auto 0 0 0;
 		text-transform: uppercase;
@@ -941,6 +981,7 @@ color: var(--color-bgitem2);
 	}
 	
 	.slideshow__item {
+
 		padding: 0 4rem 0 0;
 	}
 	.slideshow__item-number {
